--- a/hands-on_exercises/29_Fresno-Radon/Fresno-Radon-Mitigation/main.css
+++ b/hands-on_exercises/29_Fresno-Radon/Fresno-Radon-Mitigation/main.css
@@ -29,7 +29,7 @@ header {
 
 header > h1:first-child {
     text-align: center;
-    width: 100%;
+    /*width: 100%;*/
     font-size: 2.2rem;
     font-weight: normal;
     letter-spacing: .2rem;
