--- a/hands-on_exercises/29_Fresno-Radon/Fresno-Radon-Mitigation/mq_500-less.css
+++ b/hands-on_exercises/29_Fresno-Radon/Fresno-Radon-Mitigation/mq_500-less.css
@@ -1,6 +1,5 @@
 /*css-reset.................................................................*/
 
-
 /*Header-Nav................................................................*/
 
 header {
@@ -69,6 +68,10 @@ div.list {
     /**/
     flex-flow: row wrap;
     /**/
+}
+
+div.longline {
+  width: 20rem;
 }
 
 
