--- a/hands-on_exercises/29_Fresno-Radon/Fresno-Radon-Mitigation/mq_501-799.css
+++ b/hands-on_exercises/29_Fresno-Radon/Fresno-Radon-Mitigation/mq_501-799.css
@@ -73,6 +73,10 @@ div.list {
     /**/
 }
 
+div.longline {
+  width: 42rem;
+}
+
 
 /*Tables.....................................................................*/
 
