--- a/hands-on_exercises/29_Fresno-Radon/Fresno-Radon-Mitigation/main.css
+++ b/hands-on_exercises/29_Fresno-Radon/Fresno-Radon-Mitigation/main.css
@@ -7,14 +7,12 @@ html, body, div, h1, h2, p {
 }
 
 body {
-    overflow-y: scroll;
-    overflow-x: hidden;
     display: flex;
     flex-flow: row wrap;
     justify-content: center;
     align-items: flex-start;
     flex-flow: row wrap;
-    width: 100%;
+    /*width: 100%;*/
     font-family: 'Josefin Sans', sans-serif;
 }
 
@@ -25,7 +23,7 @@ header {
     display: flex;
     flex-flow: row wrap;
     justify-content: center;
-    width: 100%;
+    /*width: 100%;*/
     margin-top: 1.5rem;
 }
 
