--- a/hands-on_exercises/29_Fresno-Radon/Fresno-Radon-Mitigation/mq_800-plus.css
+++ b/hands-on_exercises/29_Fresno-Radon/Fresno-Radon-Mitigation/mq_800-plus.css
@@ -181,10 +181,12 @@ div.list {
     justify-content: space-around;
     flex-flow: row nowrap;
     margin: 1rem 0;
+    border: 1px solid hotpink;
 }
 
 ol, img {
     display: inline-block;
+    border: 1px solid hotpink;
 }
 
 a.resource {
