--- a/hands-on_exercises/30_teaching-website/main.css
+++ b/hands-on_exercises/30_teaching-website/main.css
@@ -216,8 +216,10 @@ nav.info {
    width: 95%;
  }
 
+
+/*smaller desktop-laptop screens*/
 }
-  @media (min-width: 901px) and max-width(1400px) {
+  @media (min-width: 901px) and (max-width: 1400px) {
     section.info {
       padding: 2rem 0 .5rem 0;
       justify-content: space-between;
