--- a/hands-on_exercises/30_teaching-website/main.css
+++ b/hands-on_exercises/30_teaching-website/main.css
@@ -1,6 +1,6 @@
 /*Reset*/
 
-html, body, div, section, main, h1, p, a, header, nav {
+html, body, div, section, main, h1, p, a, header, nav, footer {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -17,6 +17,7 @@ main {
     background-size: cover;
     background-position: center;
 }
+
 
 /*Header*/
 
@@ -37,7 +38,6 @@ a.logo {
     text-decoration: none;
     color: #ddd;
     font-size: 2rem;
-    /*padding-top: 1rem;*/
 }
 
 div {
@@ -64,8 +64,9 @@ div.signin a {
 }
 
 div.signin a:hover {
-  background-color: rgba(255, 255, 255, .2);
+    background-color: rgba(255, 255, 255, .2);
 }
+
 
 /*Center Display*/
 
@@ -80,13 +81,12 @@ h1.intro {
 
 /*bottom display*/
 
-section.info {
+footer.info {
     display: flex;
     flex-flow: column nowrap;
     align-items: center;
     justify-content: flex-end;
     padding: 2rem 0 .5rem 0;
-    /*height: 29.5vh;*/
     width: 100%;
     background-color: rgba(255, 255, 255, .1);
 }
@@ -108,8 +108,7 @@ p.info {
     margin-bottom: 1.25rem;
 }
 
-
-section a {
+footer a {
     text-decoration: none;
     margin: 0;
 }
@@ -150,67 +149,49 @@ nav.info {
     padding-top: 0;
 }
 
+
+/*Media Queries*/
 /*phones.......................................................*/
 
 @media (max-width: 700px) {
-
-  main {
-    background-image: url("images/g_s_03_five_small.jpg");
-
-    /*min-height: 100vh;*/
-  }
-
-  div.intro, h1.intro {
-    display: flex;
-    flex-flow: column nowrap;
-    justify-content: center;
-    align-items: center;
-  }
-
-  nav.info, div.signin, p.info br {
-    display: none;
-  }
-
-  header.logo {
-    justify-content: center;
-  }
-
-
-  section.info {
-    /*height: 50%;*/
-  }
-
-  p.info {
-    width: 95%;
-  }
-
+    main {
+        background-image: url("images/g_s_03_five_small.jpg");
+        /*min-height: 100vh;*/
+    }
+    div.intro, h1.intro {
+        display: flex;
+        flex-flow: column nowrap;
+        justify-content: center;
+        align-items: center;
+    }
+    nav.info, div.signin, p.info br {
+        display: none;
+    }
+    header.logo {
+        justify-content: center;
+    }
+    p.info {
+        width: 95%;
+    }
 }
+
 
 /*tablets........................................................*/
 
 @media (min-width: 701px) and (max-width: 900px) {
-
-
-  main {
-    background-position: left;
-  }
-
-  section.info {
-    padding: 2rem 0 .5rem 0;
-    justify-content: space-between;
-    /*height: 35%;*/
-  }
-
-  p.info br {
-   display: none;
- }
-
- p.info {
-   width: 95%;
- }
-
- nav.info {
-   width: 95%;
- }
-
+    main {
+        background-position: left;
+    }
+    footer.info {
+        justify-content: space-between;
+    }
+    p.info br {
+        display: none;
+    }
+    p.info {
+        width: 95%;
+    }
+    nav.info {
+        width: 95%;
+    }
 }
