--- a/hands-on_exercises/30_teaching-website/main.css
+++ b/hands-on_exercises/30_teaching-website/main.css
@@ -25,13 +25,15 @@ header.logo {
     display: flex;
     justify-content: space-between;
     width: 100%;
-    padding: .5rem 1.25rem;
+    padding: .4rem 1.25rem;
 }
 
 h1.logo {
     color: #ddd;
-    font-size: 2.5rem;
-    padding-top: 1rem;
+    font-size: 2rem;
+    font-family: "lato", sans-serif;
+    font-weight: 900;
+    padding-top: .5rem;
 }
 
 a.logo {
@@ -70,12 +72,22 @@ div.signin a:hover {
 
 /*Center Display*/
 
+a.intro {
+  text-decoration: none;
+}
+
 h1.intro {
     display: block;
     color: white;
-    font-size: 4rem;
-    font-family: "Tahoma", sans-serif;
+    font-size: 4.5rem;
+    font-family: "lato", sans-serif;
+    font-weight: 900;
     text-align: center;
+    line-height: 4.3rem;
+}
+
+h1.intro:hover {
+  color: red;
 }
 
 
@@ -86,7 +98,7 @@ footer.info {
     flex-flow: column nowrap;
     align-items: center;
     justify-content: flex-end;
-    padding: 2rem 0 .5rem 0;
+    padding: 2.5rem 0 .5rem 0;
     width: 100%;
     background-color: rgba(255, 255, 255, .1);
 }
@@ -110,7 +122,6 @@ p.info {
 
 footer a {
     text-decoration: none;
-    margin: 0;
 }
 
 a.button {
@@ -144,7 +155,7 @@ nav.info {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    padding-bottom: 1.5rem;
+    padding-bottom: 1rem;
     margin: 0;
     padding-top: 0;
 }
