--- a/hands-on_exercises/31_Travel-website/mobile.css
+++ b/hands-on_exercises/31_Travel-website/mobile.css
@@ -13,8 +13,10 @@
   }
 
   div.atf {
-    height: 72vh;
+      height: 72vh;
+      background-image: url("img/adventure-sm.jpg");
   }
+
 
   footer.atf {
     height: 20vh;
