--- a/hands-on_exercises/31_Travel-website/mobile.css
+++ b/hands-on_exercises/31_Travel-website/mobile.css
@@ -15,6 +15,8 @@
   div.atf {
       height: 72vh;
       background-image: url("img/adventure-sm.jpg");
+      background-size: auto;
+      background-attachment: scroll;
   }
 
 
