--- a/hands-on_exercises/31_Travel-website/mobile.css
+++ b/hands-on_exercises/31_Travel-website/mobile.css
@@ -66,7 +66,7 @@
 
   div.atf {
       height: 72vh;
-      background-image: url("img/adventure.jpg");
+      background-image: url("img/adventure-sm.jpg");
       background-attachment: scroll;
   }
 
