--- a/hands-on_exercises/31_Travel-website/main.css
+++ b/hands-on_exercises/31_Travel-website/main.css
@@ -134,6 +134,10 @@ section.photos {
     margin-bottom: .5rem;
 }
 
+section.photos-mobile {
+  display: none;
+}
+
 img {
     margin: .3rem 0;
 }
