--- a/hands-on_exercises/31_Travel-website/mobile.css
+++ b/hands-on_exercises/31_Travel-website/mobile.css
@@ -37,15 +37,13 @@
   }
 
   section.photos {
-    display: none;
-  }
-
-  section.photos-mobile {
     width: 100vw;
   }
 
+
   img {
-    max-width: 100vw;
+    width: 375px;
+    height: 255px;
   }
 
   section.story {
